Update scroball and selection

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <div class="nav__right">
           <ul class="nav__menu">
             <li class="menu__item">
-              <a href="" class="menu__link">Home</a>
+              <a href="#!" class="menu__link">Home</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">Destinations</a>
+              <a href="#!" class="menu__link">Destinations</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">About</a>
+              <a href="#!" class="menu__link">About</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">Partner</a>
+              <a href="#!" class="menu__link">Partner</a>
             </li>
           </ul>
           <div class="nav__btn">
