--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
             </div>
           </div>
         </div>
+
+        <div class="decorate plus-1">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate circle-1">
+          <img src="./img/circle.png" alt="">
+        </div>
+        <div class="decorate circle-2">
+          <img src="./img/circle.png" alt="">
+        </div>
       </section>
 
       <section id="the-world" class="the-world" data-aos="fade-up">
@@ -147,6 +157,16 @@
               <img class="img__world" src="./img/illustration-2.png" alt="">
             </div>
           </div>
+        </div>
+
+        <div class="decorate plus-2">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate plus-1">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate circle-3">
+          <img src="./img/circle.png" alt="">
         </div>
       </section>
 
@@ -188,6 +208,16 @@
             </div>
           </div>
         </div>
+
+        <div class="decorate plus-1">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate plus-3">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate circle-2">
+          <img src="./img/circle.png" alt="">
+        </div>
       </section>
 
       <section id="guides" class="guides" data-aos="fade-up">
@@ -204,6 +234,16 @@
               <img class="img__guides" src="./img/illustration-3.png" alt="">
             </div>
           </div>
+        </div>
+
+        <div class="decorate circle-1">
+          <img src="./img/circle.png" alt="">
+        </div>
+        <div class="decorate plus-1">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate plus-4">
+          <img src="./img/plus.png" alt="">
         </div>
       </section>
 
@@ -235,6 +275,16 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="decorate circle-1">
+          <img src="./img/circle.png" alt="">
+        </div>
+        <div class="decorate plus-1">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate circle-2">
+          <img src="./img/circle.png" alt="">
         </div>
       </section>
 
@@ -306,6 +356,16 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="decorate plus-4">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate plus-1">
+          <img src="./img/plus.png" alt="">
+        </div>
+        <div class="decorate circle-1">
+          <img src="./img/circle.png" alt="">
         </div>
       </section>
     </div>
