--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
-    <title>Tour & Travel</title>
+    <link rel="icon" href="./img/logo.png" type="image/png" sizes="16x16 32x32" />
+    <title>One Travel</title>
   </head>
 
   <body>
