--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
       <section id="destinations" class="destinations" data-aos="fade-up">
         <div class="row">
           <h3 class="heding">Featured destinations</h3>
-          <button class="btn-text btn-text--orange">View all <i class="btn-icon fa-solid fa-chevron-right"></i></button>
+          <button class="btn-text btn-text--orange btn-text__icon">
+            View all
+            <i class="btn-icon fa-solid fa-chevron-right"></i>
+          </button>
         </div>
 
         <div class="destinations__group">
@@ -219,6 +222,13 @@
         </div>
         <div class="decorate circle-2">
           <img src="./img/circle.png" alt="">
+        </div>
+
+        <div class="row app-btn__text">
+          <button class="btn-text btn-text--orange btn-text__icon">
+            View all
+            <i class="btn-icon fa-solid fa-chevron-right"></i>
+          </button>
         </div>
       </section>
 
@@ -271,8 +281,8 @@
               <div class="picture-item picture-item--max float-right" data-aos="fade-up">
                 <img src="./img/man.jpg" alt="">
                 <div class="text__box text__box--right">
-                  <i class="fa-solid fa-chevron-left icon-prev"></i>
-                  <i class="fa-solid fa-chevron-right icon-next"></i>
+                  <a href="#!"><i class="fa-solid fa-chevron-left icon-prev"></i></a>
+                  <a href="#!"><i class="fa-solid fa-chevron-right icon-next"></i></a>
                 </div>
               </div>
             </div>
@@ -293,7 +303,9 @@
       <section id="stories" class="stories" data-aos="fade-up">
         <div class="row">
           <h3 class="heding">Featured destinations</h3>
-          <button class="btn-text btn-text--orange">View all <i class="btn-icon fa-solid fa-chevron-right"></i></button>
+          <button class="btn-text btn-text--orange btn-text__icon">
+            View all
+            <i class="btn-icon fa-solid fa-chevron-right"></i></button>
         </div>
 
         <div class="destinations__group" data-aos="fade-up">
@@ -360,14 +372,21 @@
           </div>
         </div>
 
-        <div class="decorate plus-4">
+        <div class="decorate plus-3">
           <img src="./img/plus.png" alt="">
         </div>
         <div class="decorate plus-1">
           <img src="./img/plus.png" alt="">
         </div>
-        <div class="decorate circle-1">
+        <div class="decorate circle-2">
           <img src="./img/circle.png" alt="">
+        </div>
+
+        <div class="row app-btn__text">
+          <button class="btn-text btn-text--orange btn-text__icon">
+            View all
+            <i class="btn-icon fa-solid fa-chevron-right"></i>
+          </button>
         </div>
       </section>
     </div>
